--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -62,6 +62,7 @@ add_executable(${TARGET_NAME}
     src/main.cpp
     src/onnx_test_image.cpp
     src/onnx_test_video.cpp
+    src/SAM2_Session.cpp
     src/SAM2.cpp
     ${OPENFILEDIALOG_SRC}
 )
